Add support of beforeEach test method + add test frame